--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-markdown": "^8.0.5",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
+    "react-speech-recognition": "^3.10.0",
     "react-syntax-highlighter": "^15.5.0",
     "web-vitals": "^2.1.4"
   },
